# gsdk

./: .gitignore  CMakeLists.txt
cmake/: gsdk.cmake  platform.cmake
cmake/configs/: base.cmake  dll.cmake  lib.cmake
examples/plugin/: CMakeLists.txt
examples/plugin/src/: plugin.cpp
sdk/lib/public/win64/: tier0.exp  tier0.lib
sdk/public/engine/: iserverplugin.h
sdk/public/tier1/: utlsymbol.h
sdk/tier0/: CMakeLists.txt
sdk/tier1/: CMakeLists.txt  convar.cpp  interface.cpp  keyvalues.cpp
sdk/vpc_scripts/: source_lib_win32_debug.vpc
