set(
  TIER1_SRC

  "appinstance.cpp"
 	"bitbuf.cpp"
 	"newbitbuf.cpp"
 	"byteswap.cpp"
 	"characterset.cpp"
 	"checksum_crc.cpp"
 	"checksum_md5.cpp"
 	"checksum_sha1.cpp"
 	"circularbuffer.cpp"
 	"commandbuffer.cpp"
 	"convar.cpp"
 	"datamanager.cpp"
 	"diff.cpp"
 	"exprevaluator.cpp"
 	"generichash.cpp"
 	"interface.cpp"
 	"keyvalues.cpp"
 	"keyvaluesjson.cpp"
 	"kvpacker.cpp"
 	"lzmaDecoder.cpp"
 	"lzss.cpp"
 	"mempool.cpp"
 	"memstack.cpp"
 	"NetAdr.cpp"
 	"splitstring.cpp"
 	"$<$<PLATFORM_ID:Windows>:processor_detect.cpp>"
 	"$<$<PLATFORM_ID:Linux,Darwin>:processor_detect_linux.cpp>"
 	"$<$<PLATFORM_ID:Linux>:qsort_s.cpp>"
 	"rangecheckedvar.cpp"
 	"stringpool.cpp"
 	"strtools.cpp"
 	"strtools_unicode.cpp"
 	"tier1.cpp"
 	"tier1_logging.cpp"
 	"timeutils.cpp"
 	"uniqueid.cpp"
 	"utlbuffer.cpp"
 	"utlbufferutil.cpp"
  "utlsoacontainer.cpp"
 	"utlstring.cpp"
 	"utlstringtoken.cpp"
 	"utlsymbol.cpp"
  "miniprofiler_hash.cpp"
 	"sparsematrix.cpp"
  "memoverride_dummy.cpp"
 	"$<$<PLATFORM_ID:Linux>:pathmatch.cpp>"

  "${GSDK}/public/tier1/appinstance.h"
  "${GSDK}/public/tier1/bitbuf.h"
  "${GSDK}/public/tier1/byteswap.h"
  "${GSDK}/public/tier1/callqueue.h"
  "${GSDK}/public/tier1/characterset.h"
  "${GSDK}/public/tier1/checksum_crc.h"
  "${GSDK}/public/tier1/checksum_md5.h"
  "${GSDK}/public/tier1/checksum_sha1.h"
  "${GSDK}/public/tier1/circularbuffer.h"
  "${GSDK}/public/tier1/commandbuffer.h"
  "${GSDK}/public/tier1/convar.h"
  "${GSDK}/public/tier1/datamanager.h"
  "${GSDK}/public/datamap.h"
  "${GSDK}/public/tier1/delegates.h"
  "${GSDK}/public/tier1/diff.h"
  "${GSDK}/public/tier1/exprevaluator.h"
  "${GSDK}/public/tier1/fmtstr.h"
  "${GSDK}/public/tier1/functors.h"
  "${GSDK}/public/tier1/generichash.h"
  "${GSDK}/public/tier1/iconvar.h"
  "${GSDK}/public/tier1/interface.h"
  "${GSDK}/public/tier1/interpolatedvar.h"
  "${GSDK}/public/tier1/keyvalues.h"
  "${GSDK}/public/tier1/keyvaluesjson.h"
  "${GSDK}/public/tier1/kvpacker.h"
  "${GSDK}/public/tier1/lzmaDecoder.h"
  "${GSDK}/public/tier1/lerp_functions.h"
  "${GSDK}/public/tier1/lzss.h"
  "${GSDK}/public/tier1/mempool.h"
  "${GSDK}/public/tier1/memstack.h"
  "${GSDK}/public/tier1/netadr.h"
  "${GSDK}/public/tier1/processor_detect.h"
  "${GSDK}/public/tier1/rangecheckedvar.h"
  "${GSDK}/public/tier1/refcount.h"
  "${GSDK}/public/tier1/smartptr.h"
  "${GSDK}/public/tier1/sparsematrix.h"
  "${GSDK}/public/tier1/stringpool.h"
  "${GSDK}/public/tier1/strtools.h"
  "${GSDK}/public/tier1/tier1.h"
  "${GSDK}/public/tier1/tier1_logging.h"
  "${GSDK}/public/tier1/timeutils.h"
  "${GSDK}/public/tier1/tokenset.h"

  "$<$<PLATFORM_ID:Windows>:${GSDK}/public/tier1/uniqueid.h>"
  "${GSDK}/public/tier1/utlbidirectionalset.h"
  "${GSDK}/public/tier1/utlblockmemory.h"
  "${GSDK}/public/tier1/utlbuffer.h"
  "${GSDK}/public/tier1/utlbufferutil.h"
  "${GSDK}/public/tier1/utlcommon.h"
  "${GSDK}/public/tier1/utldict.h"
  "${GSDK}/public/tier1/utlenvelope.h"
  "${GSDK}/public/tier1/utlfixedmemory.h"
  "${GSDK}/public/tier1/utlhandletable.h"
  "${GSDK}/public/tier1/utlhash.h"
  "${GSDK}/public/tier1/utlhashtable.h"
  "${GSDK}/public/tier1/utllinkedlist.h"
  "${GSDK}/public/tier1/utlmap.h"
  "${GSDK}/public/tier1/utlmemory.h"
  "${GSDK}/public/tier1/utlmultilist.h"
  "${GSDK}/public/tier1/utlpriorityqueue.h"
  "${GSDK}/public/tier1/utlqueue.h"
  "${GSDK}/public/tier1/utlrbtree.h"
  "${GSDK}/public/tier1/utlsoacontainer.h"
  "${GSDK}/public/tier1/utlsortvector.h"
  "${GSDK}/public/tier1/utlstack.h"
  "${GSDK}/public/tier1/utlstring.h"
  "${GSDK}/public/tier1/utlstringtoken.h"
  "${GSDK}/public/tier1/utlstringmap.h"
  "${GSDK}/public/tier1/utlsymbol.h"
  "${GSDK}/public/tier1/utltscache.h"
  "${GSDK}/public/tier1/utlvector.h"
  "${GSDK}/public/tier1/miniprofiler_hash.h"
  "$<$<PLATFORM_ID:Windows,Linux,Darwin>:${GSDK}/common/xbox/xboxstubs.h>"
)

add_library(
  tier1

  STATIC

  ${TIER1_SRC}
)

gsdk_lib(tier1)